# solana-amm

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
programs/amm/: Cargo.toml
programs/amm/src/: lib.rs
scripts/: build-idl.cjs  live-demo.ts
tests/: amm.ts
